sfdc/force-app/main/default/objects/Opportunity/fields/Fulcrum_AI_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Fulcrum_AI_Confidence__c</fullName>
    <description>AI confidence score from MarginArc recommendation</description>
    <inlineHelpText
  >This value is populated by the MarginArc Margin Advisor</inlineHelpText>
    <label>AI Confidence %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>