sfdc/force-app/main/default/objects/Opportunity/fields/Fulcrum_Competitor_Names__c.field-meta.xml
<CustomField>
    <fullName>Fulcrum_Competitor_Names__c</fullName>
    <description
  >Specific VAR competitors on this deal (used by ML model)</description>
    <inlineHelpText
  >Select which VAR competitors are competing on this deal</inlineHelpText>
    <label>Competitor VARs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CDW</fullName>
            </value>
            <value>
                <fullName>Computacenter</fullName>
            </value>
            <value>
                <fullName>Connection</fullName>
            </value>
            <value>
                <fullName>Converge</fullName>
                <label>Converge Technology</label>
            </value>
            <value>
                <fullName>DimensionData</fullName>
                <label>Dimension Data (NTT)</label>
            </value>
            <value>
                <fullName>ePlus</fullName>
            </value>
            <value>
                <fullName>Insight</fullName>
                <label>Insight Enterprises</label>
            </value>
            <value>
                <fullName>Logicalis</fullName>
            </value>
            <value>
                <fullName>Optiv</fullName>
            </value>
            <value>
                <fullName>Presidio</fullName>
            </value>
            <value>
                <fullName>SHI</fullName>
                <label>SHI International</label>
            </value>
            <value>
                <fullName>Softchoice</fullName>
            </value>
            <value>
                <fullName>Trace3</fullName>
            </value>
            <value>
                <fullName>Zones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>