sfdc/force-app/main/default/objects/Opportunity/fields/Fulcrum_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Fulcrum_Competitors__c</fullName>
    <description>Number of competing vendors on this deal</description>
    <label>Competitors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>0 - None</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1 - Single competitor</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Two competitors</label>
            </value>
            <value>
                <fullName>3+</fullName>
                <label>3+ - Multiple competitors</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>