sfdc/force-app/main/default/objects/Opportunity/fields/Fulcrum_Cost__c.field-meta.xml
<CustomField>
    <fullName>Fulcrum_Cost__c</fullName>
    <description>Calculated cost (Revenue minus Margin)</description>
    <formula
  >IF(ISBLANK(Fulcrum_Revenue__c) || ISBLANK(Fulcrum_GP_Percent__c), NULL, Fulcrum_Revenue__c * (1 - Fulcrum_GP_Percent__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>