sfdc/force-app/main/default/objects/Opportunity/fields/Fulcrum_Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Fulcrum_Customer_Segment__c</fullName>
    <description>Customer segment classification</description>
    <label>Customer Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>MidMarket</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>Public Sector</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
                <isActive>false</isActive>
                <label>Commercial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>