sfdc/force-app/main/default/objects/Opportunity/fields/Fulcrum_Deal_Reg_Type__c.field-meta.xml
<CustomField>
    <fullName>Fulcrum_Deal_Reg_Type__c</fullName>
    <description>Type of deal registration with the OEM</description>
    <label>Deal Reg Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NotRegistered</fullName>
                <label>Not Registered</label>
            </value>
            <value>
                <fullName>StandardApproved</fullName>
                <label>Standard Approved</label>
            </value>
            <value>
                <fullName>PremiumHunting</fullName>
                <label>Premium Hunting</label>
            </value>
            <value>
                <fullName>Teaming</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>PartnerSourced</fullName>
                <isActive>false</isActive>
                <label>PartnerSourced</label>
            </value>
            <value>
                <fullName>StandardDealReg</fullName>
                <isActive>false</isActive>
                <label>StandardDealReg</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>