sfdc/force-app/main/default/objects/Opportunity/fields/Fulcrum_Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Fulcrum_Deal_Type__c</fullName>
    <description
  >Type of deal - new business, renewal, or expansion</description>
    <inlineHelpText>Select the type of deal</inlineHelpText>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>Refresh</fullName>
                <label>Hardware Refresh</label>
            </value>
            <value>
                <fullName>Run Rate</fullName>
                <label>Run Rate / Transactional</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>