sfdc/force-app/main/default/objects/Opportunity/fields/Fulcrum_GP_Percent__c.field-meta.xml
<CustomField>
    <fullName>Fulcrum_GP_Percent__c</fullName>
    <description>Gross Profit percentage for this opportunity</description>
    <label>GP %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>