sfdc/force-app/main/default/objects/Opportunity/fields/Fulcrum_Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Fulcrum_Loss_Reason__c</fullName>
    <description
  >Primary reason for losing the deal (for Closed Lost opportunities)</description>
    <inlineHelpText>Select the primary reason we lost this deal</inlineHelpText>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
                <label>Price - Competitor Undercut</label>
            </value>
            <value>
                <fullName>Relationship</fullName>
                <label>Relationship - Competitor Incumbent</label>
            </value>
            <value>
                <fullName>Technical</fullName>
                <label>Technical - Solution Fit</label>
            </value>
            <value>
                <fullName>Timing</fullName>
                <label>Timing - Project Delayed/Cancelled</label>
            </value>
            <value>
                <fullName>Budget</fullName>
                <label>Budget - Customer Reduced Spend</label>
            </value>
            <value>
                <fullName>Direct</fullName>
                <label>Went Direct with OEM</label>
            </value>
            <value>
                <fullName>NoDecision</fullName>
                <label>No Decision Made</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>