sfdc/force-app/main/default/objects/Opportunity/fields/Fulcrum_Margin__c.field-meta.xml
<CustomField>
    <fullName>Fulcrum_Margin__c</fullName>
    <description>Calculated gross profit margin (Revenue * GP%)</description>
    <formula
  >IF(ISBLANK(Fulcrum_Revenue__c) || ISBLANK(Fulcrum_GP_Percent__c), NULL, Fulcrum_Revenue__c * Fulcrum_GP_Percent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>