sfdc/force-app/main/default/objects/Opportunity/fields/Fulcrum_OEM__c.field-meta.xml
<CustomField>
    <fullName>Fulcrum_OEM__c</fullName>
    <description>Primary OEM/Vendor for this opportunity</description>
    <inlineHelpText>Select the primary vendor for this deal</inlineHelpText>
    <label>OEM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>HPE</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>Palo Alto</fullName>
            </value>
            <value>
                <fullName>Fortinet</fullName>
            </value>
            <value>
                <fullName>VMware</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>NetApp</fullName>
            </value>
            <value>
                <fullName>Pure Storage</fullName>
            </value>
            <value>
                <fullName>Arista</fullName>
            </value>
            <value>
                <fullName>CrowdStrike</fullName>
            </value>
            <value>
                <fullName>Nutanix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>