sfdc/force-app/main/default/objects/Opportunity/fields/Fulcrum_OEM_Cost__c.field-meta.xml
<CustomField>
    <fullName>Fulcrum_OEM_Cost__c</fullName>
    <description>Cost from OEM/Distributor for this deal</description>
    <inlineHelpText>Enter the cost from the OEM or distributor</inlineHelpText>
    <label>OEM Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>