sfdc/force-app/main/default/objects/Opportunity/fields/Fulcrum_Planned_Margin__c.field-meta.xml
<CustomField>
    <fullName>Fulcrum_Planned_Margin__c</fullName>
    <description>Your planned margin percentage for this deal</description>
    <inlineHelpText>Enter your target margin percentage</inlineHelpText>
    <label>Planned Margin %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>