sfdc/force-app/main/default/objects/Opportunity/fields/Fulcrum_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Fulcrum_Product_Category__c</fullName>
    <description>Primary product category for this deal</description>
    <inlineHelpText>Select the primary product category</inlineHelpText>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Compute</fullName>
                <label>Compute / Servers</label>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
                <label>Cloud / SaaS</label>
            </value>
            <value>
                <fullName>Collaboration</fullName>
            </value>
            <value>
                <fullName>DataCenter</fullName>
                <label>Data Center Infrastructure</label>
            </value>
            <value>
                <fullName>Software</fullName>
                <label>Software Licensing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>