sfdc/force-app/main/default/objects/Opportunity/fields/Fulcrum_Quarter_End__c.field-meta.xml
<CustomField>
    <fullName>Fulcrum_Quarter_End__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Whether this deal closes in the last month of a quarter</description>
    <inlineHelpText>Check if this is a quarter-end close</inlineHelpText>
    <label>Quarter End Deal</label>
    <type>Checkbox</type>
</CustomField>