sfdc/force-app/main/default/objects/Opportunity/fields/Fulcrum_Recommended_Margin__c.field-meta.xml
<CustomField>
    <fullName>Fulcrum_Recommended_Margin__c</fullName>
    <description>AI-recommended margin percentage from MarginArc</description>
    <inlineHelpText
  >This value is populated by the MarginArc Margin Advisor</inlineHelpText>
    <label>Recommended Margin %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>