sfdc/force-app/main/default/objects/Opportunity/fields/Fulcrum_Relationship_Strength__c.field-meta.xml
<CustomField>
    <fullName>Fulcrum_Relationship_Strength__c</fullName>
    <description>Strength of relationship with this customer</description>
    <label>Relationship Strength</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Developing</fullName>
                <isActive>false</isActive>
                <label>Developing</label>
            </value>
            <value>
                <fullName>Established</fullName>
                <isActive>false</isActive>
                <label>Established</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>