sfdc/force-app/main/default/objects/Opportunity/fields/Fulcrum_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Fulcrum_Revenue__c</fullName>
    <description>Total revenue/sell price for this opportunity</description>
    <label>Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>