sfdc/force-app/main/default/objects/Opportunity/fields/Fulcrum_Services_Attached__c.field-meta.xml
<CustomField>
    <fullName>Fulcrum_Services_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Whether professional services are included in this deal</description>
    <inlineHelpText>Check if professional services are included</inlineHelpText>
    <label>Services Attached</label>
    <type>Checkbox</type>
</CustomField>