sfdc/force-app/main/default/objects/Opportunity/fields/Fulcrum_Value_Add__c.field-meta.xml
<CustomField>
    <fullName>Fulcrum_Value_Add__c</fullName>
    <description>Level of value-add services included</description>
    <label>Value-Add Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>