sfdc/force-app/main/default/objects/Opportunity/fields/Fulcrum_Win_Probability__c.field-meta.xml
<CustomField>
    <fullName>Fulcrum_Win_Probability__c</fullName>
    <description>AI-predicted win probability from MarginArc</description>
    <inlineHelpText
  >This value is populated by the MarginArc Margin Advisor</inlineHelpText>
    <label>Win Probability %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>